--- a/test_server/dockerfile
+++ b/test_server/dockerfile
@@ -1,7 +1,6 @@
 FROM node:12
 
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
-RUN npm install -g artillery --ignore-scripts
 
 WORKDIR /home/node/app
 COPY package*.json ./
@@ -13,4 +12,4 @@ RUN chown -R node:node /home/node/app
 
 USER node
 
-CMD [ "artillery", "run", "test-config.config"]
+CMD [ "node", "server.js"]
