--- a/performance_test_app/test-config.yaml
+++ b/performance_test_app/test-config.yaml
@@ -1,5 +1,5 @@
 config:
-  target: "http://localhost:3000"
+  target: "http://172.17.0.1:3000"
   phases:
     - duration: 60
       arrivalRate: 20
