--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,9 +17,10 @@ pipeline {
             parallel {
                 stage('Dev stage') {
                     steps {
-                        sh "git branch"
-                        sh "git status"
+                        sh 'git branch'
+                        sh 'git status'
                         sh 'printenv'
+                        sh 'ls -al'
                         dir("dev") {
                             echo ">> Run deploy applications "
                         }
