--- a/ansible/Jenkinsfile
+++ b/ansible/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
            steps {
                sh 'ls -la'
-               sh 'ansible-playbook --become --become-user=root -i inventoryansible/playbook.yaml'
+               sh 'ansible-playbook --become --become-user=root -i inventory ansible/playbook.yaml'
            }
 
         }
