--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -4,4 +4,4 @@ all:
     jenkins_master:
       ansible_host: 3.0.57.168
       ansible_user: ec2-user
-      ansible_become: True
+      ansible_become: true
