--- a/ansible/Jenkinsfile
+++ b/ansible/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
            steps {
                dir("ansible") {
                 sh 'ls -la'
-                sh 'ansible-playbook --become --become-user=root -i inventory playbook.yaml'
+                sh 'ansible-playbook -i inventory playbook.yaml'
                }
            }
 
