--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -1,8 +1,8 @@
 ---
 all:
-  jenkins_master:
-    hosts:
-      host1:
-        ansible_host: 3.0.57.168
-        ansible_user: ec2-user
-        ansible_become: true
+  children:
+      hosts:
+        jenkins_master:
+          ansible_host: 3.0.57.168
+          ansible_user: ec2-user
+          ansible_become: true
