--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -1,7 +1,7 @@
 ---
 all:
   hosts:
-    host1:
+    test1:
       ansible_host: 3.0.57.168
       ansible_user: ec2-user
       ansible_become: true
