--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                         sh 'id'
                         sh "echo ${registry}"
                         dir("test_server") {
-                            sh "docker build -t ${registry}:${env.BUILD_NUMBER} ."
+                            sh "docker build ${registry}:${env.BUILD_NUMBER}"
                         }
                         dir("dev") {
                             echo ">> Run deploy applications "
