--- a/ansible/roles/docker/tasks/main.yaml
+++ b/ansible/roles/docker/tasks/main.yaml
@@ -4,8 +4,15 @@
     state: present
   vars:
     packages:
+    - epel-release
     - git
     - docker
+    - python2-pip
+
+- pip:
+    name:
+      - docker-py
+
 
 - name: Make sure a service is running and enabled
   systemd:
