--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -4,7 +4,7 @@
     image: goodrainapps/artifactory-oss
     state: started
     env:
-      MIN_MAX_OPEN_FILES: 100
+      MIN_MAX_OPEN_FILES: "100"
     volumes:
       - artifactory_data:/var/opt/jfrog/artifactory
     ports: 
