--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -6,6 +6,6 @@
     env:
       MIN_MAX_OPEN_FILES: "100"
     volumes:
-      - artifactory_data:/var/opt/jfrog/artifactory
+      - artifactory_oss_data:/var/opt/jfrog/artifactory
     ports: 
       - "8081:8081"
