--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -5,6 +5,6 @@
     state: started
     volumes:
       - nexus-data:/nexus-data
+      - nexus-config:/opt/sonatype/nexus/etc/karaf
     ports: 
       - "8081:8081"
-      - "8082:8082"
