--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -1,3 +1,11 @@
+- name: Build an image and push it to a private repo
+  docker_image:
+    build:
+      path: .
+    name: nexus3_custom
+    tag: 1.0.0
+    source: build
+
 - name: create a Artifactory container
   docker_container:
     name: nexus_artifactory
