--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -1,6 +1,6 @@
-- name: This command will change the working directory to somedir/.
-  shell:
-    cmd: ls -la
+- copy:
+    src: "dockerfile"
+    dest: /tmp
 
 - name: Build an image and push it to a private repo
   docker_image:
