--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -1,12 +1,7 @@
-- name: copy
-  copy:
-    src: "dockerfile"
-    dest: /tmp
-
 - name: Build an image and push it to a private repo
   docker_image:
     build:
-      path: .
+      path: dockerfile
     name: nexus3_custom
     tag: 1.0.0
     source: build
