--- a/ansible/roles/docker_artifactory/tasks/main.yaml
+++ b/ansible/roles/docker_artifactory/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Build an image
   docker_image:
     build:
-      path: .
+      path: "{{ role_path }}/files"
     name: nexus3_custom
     tag: 1.0.0
     source: build
