--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
     environment {
         GIT_URL = 'https://github.com/fpunthira/performance_test_lab.git'
-        registry = '3.0.57.168:18000/test'
+        registry = '3.0.57.168:18000/app'
     }
     /* specify nodes for executing */
     agent any
