--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,8 +26,9 @@ pipeline {
                         sh "echo ${registry}"
                         dir("test_server") {
                             sh "docker build -t ${registry}:${env.BUILD_NUMBER} -t ${registry}:latest . && \
-                            docker login ${registry} 
-                            docker push ${registry}:latest"
+                            docker login ${registry} && \
+                            docker push ${registry}:latest
+                            " 
                         }
                         dir("dev") {
                             echo ">> Run deploy applications "
