--- a/ansible/Jenkinsfile
+++ b/ansible/Jenkinsfile
@@ -7,13 +7,21 @@ pipeline {
     /* specify nodes for executing */
     agent any
     stages {
-        stage('Checkout') {
+        stage('Checkout Source Code from SCM') {
             steps {
                 checkout scm
             }
-        }        
-        stage('test') {
+        }      
+        stage("Playbook Validation") {
+           steps {
+               dir("ansible") {
+                sh 'ls -la'
+                sh 'ansible-lint playbook.yaml'
+               }
+           }
 
+        }  
+        stage('Run Playbook') {
            steps {
                dir("ansible") {
                 sh 'ls -la'
