--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -7,3 +7,9 @@ all:
           ansible_host: 3.0.57.168
           ansible_user: ec2-user
           ansible_become: true
+    kubespray:
+      hosts:
+        host1:
+          ansible_host: 18.141.184.135
+          ansible_user: ec2-user
+          ansible_become: true
