--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -2,12 +2,14 @@
 all:
   children:
     jenkins_master:
-      ansible_host: 3.0.57.168
-      ansible_user: ec2-user
-      ansible_become: true
-    # kubespray:
-    #   hosts:
-    #     host1:
-    #       ansible_host: 18.141.184.135
-    #       ansible_user: ec2-user
-    #       ansible_become: true
+      hosts:
+        host1:
+          ansible_host: 3.0.57.168
+          ansible_user: ec2-user
+          ansible_become: true
+    kubespray:
+      hosts:
+        host1:
+          ansible_host: 18.141.184.135
+          ansible_user: ec2-user
+          ansible_become: true
