--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -13,3 +13,8 @@ all:
           ansible_host: 18.141.184.135
           ansible_user: ec2-user
           ansible_become: true
+          ip_hosts: [
+            172.31.29.242,
+            172.31.28.213,
+            172.31.20.227
+          ]
