--- a/ansible/roles/kubespray/tasks/main.yaml
+++ b/ansible/roles/kubespray/tasks/main.yaml
@@ -25,3 +25,7 @@
 - name: Install dependencies from ``requirements.txt``
   pip:
     requirements: /root/kubespray/requirements.txt
+
+- name: This command will change the working directory to somedir/.
+  shell:
+    cmd: echo "{{ ip_hosts }}"
