--- a/ansible/roles/kubespray/tasks/main.yaml
+++ b/ansible/roles/kubespray/tasks/main.yaml
@@ -28,7 +28,7 @@
 
 - name: This command will change the working directory to somedir/.
   debug: 
-    var: ip_hosts[0]
-
-- name: Run a command using a templated variable (always use quote filter to avoid injection)
-  shell: CONFIG_FILE={{ root_dir }}/inventory/mycluster/hosts.yaml python3 {{ root_dir }}/contrib/inventory_builder/inventory.py {{ ip_hosts }}
+    var: ip_hosts
+    
+# - name: Run a command using a templated variable (always use quote filter to avoid injection)
+#   shell: CONFIG_FILE={{ root_dir }}/inventory/mycluster/hosts.yaml python3 {{ root_dir }}/contrib/inventory_builder/inventory.py {{ ip_hosts }}
