--- a/ansible/roles/trident_install/tasks/main.yaml
+++ b/ansible/roles/trident_install/tasks/main.yaml
@@ -22,4 +22,4 @@
 - name: Check Trident pod is running
   debug:
     msg: "Trident pod is running"
-  when: trident_pod.stdout == 0
+  when: trident_pod.rc == 0
