--- a/ansible/roles/trident_install/tasks/main.yaml
+++ b/ansible/roles/trident_install/tasks/main.yaml
@@ -1,11 +1,11 @@
 - name: check mycluster folder is exist
   stat:
-    path: "{{ root_dir }}"
+    path: "{{ root_dir }}/trident-installer"
   register: trident_dir
 
 - name: This command will change the working directory to somedir/.
   debug: 
-    var: trident_dir.stat.exist
+    var: trident_dir.stat.exists
 
 - name: Download Trident 
   shell: |
@@ -16,7 +16,7 @@
     cd trident-installer
     cp -rp tridentctl /bin/.
     tridentctl install -n trident
-  when: trident_dir.stat.exist is not defined
+  when: trident_dir.stat.exists is not defined
   ignore_errors: true
 
 - name: test
