--- a/ansible/roles/trident_install/tasks/main.yaml
+++ b/ansible/roles/trident_install/tasks/main.yaml
@@ -15,9 +15,18 @@
     tar -xf trident-installer-20.04.0.tar.gz
     cd trident-installer
     cp -rp tridentctl /bin/.
-    tridentctl install -n trident
   when: trident_dir.stat.exists is not defined or trident_dir.stat.exists == false
   ignore_errors: true
+
+- name: test
+  shell: kubectl get pod -n trident | grep trident
+  register: trident_pod
+  ignore_errors: true
+
+- name: Trident install
+  shell: tridentctl install -n trident
+  ignore_errors: true
+  when: trident_dir.stat.exists and trident_dir.stat.exists == true and trident_pod.rc != 0
 
 - name: test
   shell: kubectl get pod -n trident | grep trident
