--- a/ansible/roles/kubespray/tasks/main.yaml
+++ b/ansible/roles/kubespray/tasks/main.yaml
@@ -27,7 +27,7 @@
   pip:
     requirements: "{{ root_dir }}/requirements.txt"
 
-- name: Install dependencies from ``requirements.txt`` with pip3
+- name: Install dependencies from ``requirements.txt`` with PIP3
   pip:
     requirements: "{{ root_dir }}/requirements.txt"
     virtualenv_python: python3
