--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -10,12 +10,11 @@ all:
     kubespray:
       hosts:
         host1:
-          ansible_host: 18.141.184.135
+          ansible_host: localhost
           ansible_user: ec2-user
           ansible_become: true
           root_dir: /root/kubespray
           ip_hosts: [
-            172.31.29.242,
-            172.31.28.213,
-            172.31.20.227
+            172.31.22.172,
+            172.31.30.126
           ]
