--- a/ansible/roles/kubespray/tasks/main.yaml
+++ b/ansible/roles/kubespray/tasks/main.yaml
@@ -51,6 +51,7 @@
         cd /root/kubespray && 
         ansible-playbook -i inventory/mycluster/hosts.yaml -u ec2-user --become --become-user=root cluster.yml
   async: 1000
+  poll: 0
   register: yum_sleeper
 
 - name: 'YUM - check on async task'
