--- a/ansible/roles/kubespray/tasks/main.yaml
+++ b/ansible/roles/kubespray/tasks/main.yaml
@@ -50,3 +50,10 @@
   shell: |
         cd /root/kubespray && 
         ansible-playbook -i inventory/mycluster/hosts.yaml -u ec2-user --become --become-user=root cluster.yml
+  async: 120 # Maximum allowed time in Seconds
+  poll: 0 # Polling Interval in Seconds
+  register: scrout
+
+- name: Some task just to debug
+  debug: 
+    var: scrout.stdout_lines
