--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -11,10 +11,10 @@ all:
       hosts:
         host1:
           ansible_host: localhost
-          ansible_user: ec2-user
+          ansible_user: sirawat
           ansible_become: true
           root_dir: /root/kubespray
           ip_hosts: [
-            172.31.24.168,
-            172.31.27.200
+            172.16.1.21,
+            1172.16.1.20
           ]
